--- a/react/package.json
+++ b/react/package.json
@@ -10,11 +10,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.1.0",
-    "vite": "^4.5.0"
+    "@vitejs/plugin-react": "4.2.1",
+    "vite": "5.0.11"
   }
 }
