--- a/svelte/package.json
+++ b/svelte/package.json
@@ -8,8 +8,8 @@
     "serve": "vite preview"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.4.6",
-    "svelte": "^3.59.1",
-    "vite": "^4.5.0"
+    "@sveltejs/vite-plugin-svelte": "2.4.6",
+    "svelte": "3.59.1",
+    "vite": "4.5.1"
   }
-}
+} 
